# SimplestApp

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  CameraController.cpp  CameraController.h  Main.qml  android_ndk_29  conanfile.txt  main.cpp  qt-profile  release.sh
